namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-feature-flags-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-feature-flags-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS Feature Flags"
    cloud-platform.justice.gov.uk/owner: "HMPPS Community of Practice: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-feature-flags"
    cloud-platform.justice.gov.uk/team-name: "hmpps-lead-developers"
